# tgbin

./: .env.default.yaml  .env.yaml  .gitignore  Caddyfile  Cargo.toml  DockerfileBackend  docker-compose.yaml
backend/: Dockerfile
backend/src/presentations/: api_presentation.rs
backend/src/services/: user_service.rs
frontend/: Caddyfile  DockerfileFrontend  Makefile
frontend/src/: App.css  App.tsx  config.ts
src/: lib.rs  main.rs
src/presentations/: api_presentation.rs  mod.rs  tg_presentation.rs
src/repositories/: user_repository.rs
src/services/: mod.rs  paste_service.rs  user_service.rs
src/settings/: settings.rs
