[package]
name = "tgbin"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5"
teloxide = "0.17.0"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
redb = "3.1.0"
axum = "0.8.6"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
html-escape = "0.2.13"
config = "0.15.18"
